--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="my-text">
-                    <h5>Hi I'm <span class="">Frontend Developer</span></h5>
+                    <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
                     <h1>Vennala Praveen</h1>
                     <p>I am a passionate Frontend Developer dedicated to crafting seamless, visually appealing, and user-friendly web interfaces. With a strong foundation in HTML, CSS, and JavaScript, I specialize in creating responsive designs that bring concepts to life and enhance user experience. My goal is to merge creativity with technology to deliver impactful digital solutions.</p>
                     
@@ -56,6 +56,27 @@
            </div>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.0/typed.js"></script>
+
+    <script>
+        /** creating button click show hide navbar **/
+        var togglebtn = document.querySelector(".togglebtn");
+        var nav = document.querySelector(".navlinks");
+        var links = document.querySelector(".navlinks li");
+
+        togglebtn.addEventListener("click", function(){
+            this.classList.toggle("click");
+            nav.classList.toggle("open");
+        })
+
+        var typed = new Typed(".input",{
+            strings:["Frontend Developer", "Gamer", "Web Developer"],
+            typedSpeed:70,
+            backSpeed:55,
+            loop:true,
+        });
+    </script>
     
 </body>
 </html>
