--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
                 <div class="my-text">
                     <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
                     <h1>Vennala Praveen</h1>
-                    <p>I am a passionate Frontend Developer dedicated to crafting seamless, visually appealing, and user-friendly web interfaces. With a strong foundation in HTML, CSS, and JavaScript, I specialize in creating responsive designs that bring concepts to life and enhance user experience. My goal is to merge creativity with technology to deliver impactful digital solutions.</p>
+                    <p>
+                        I am a passionate Frontend Developer dedicated to crafting seamless, visually appealing, and user-friendly web interfaces. 
+                        With a strong foundation in HTML, CSS, and JavaScript, I specialize in creating responsive designs that bring concepts to life and enhance user experience. 
+                        My goal is to merge creativity with technology to deliver impactful digital solutions.
+                    </p>
                     
                     <div class="btn-group">
                         <a href="#" class="btn active">Download CV</a>
